--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,11 @@ edition = "2021"
 fp = [] 
 
 [dependencies]
-sensirion-i2c = { git="https://github.com/lc525/sensirion-i2c-rs", branch="hal-1.0.0-alpha.6" }
-embedded-hal = "1.0.0-alpha.6"
+sensirion-i2c = { git="https://github.com/rhomber/sensirion-i2c-rs.git", branch="master" }
+embedded-hal = { version = "1.0.0" }
 
 [dev-dependencies]
-embedded-hal-mock = { git="https://github.com/niclashoyer/embedded-hal-mock", branch="hal-1.0.0" }
+embedded-hal-mock = { version = "0.10.0" }
 
 [profile.dev]
 opt-level = 0
